--- a/styles/aikstyles.css
+++ b/styles/aikstyles.css
@@ -1,12 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@500&display=swap');
+
 * {
     box-sizing: border-box;
     transition: 1s;
 }
-body{
+
+body {
     margin: 0;
     font-family: 'Outfit';
 }
+
+figure,p{
+    margin: 0;
+}
+
 main {
     display: flex;
     flex-direction: column;
@@ -16,24 +23,92 @@ main {
     background-color: hsl(217, 54%, 11%);
     border: 1px solid hsl(217, 54%, 11%);
 }
-.container{
+
+.container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-self: center;
-    background-color:  hsl(216, 50%, 16%);
-    border: 1px solid  hsl(216, 50%, 16%);
+    background-color: hsl(216, 50%, 16%);
+    border: 1px solid hsl(216, 50%, 16%);
+    border-radius: 5px;
+    max-width: 100%;
+    margin: 20px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding: 18px;
 }
+
+.container>figure>img {
+    border-radius: 5px;
+    max-width: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 .container>h1 {
-    color : hsl(0, 0%, 100%);
+    color: hsl(0, 0%, 100%);
 }
+
+.container>p {
+    color: hsl(215, 32%, 27%);
+}
+
 .cont1 {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    padding: 18px;
 }
+
 .contd1 {
+    align-self: flex-start;
     display: flex;
     flex-direction: row;
 }
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+
+.contd2 {
+    align-self: flex-end;
+    display: flex;
+    flex-direction: row;
+    color: hsl(215, 32%, 27%);
+}
+
+.cont2 {
+    display: flex;
+    flex-direction: row;
+    border-top: 1px solid hsl(215, 32%, 27%);
+    padding-top: 18px;
+}
+
+.cont2>figure{
+    padding: 0;
+    width: 12%;
+}
+
+.cont2>figure>img {
+    max-width: 100%;
+    border-radius: 50%;
+    margin: 0;
+    border: 1px solid hsl(0, 0%, 100%);
+}
+
+.cont2>p {
+    align-self: center;
+    margin-left: 18px;
+    color: hsl(0, 0%, 100%);
+}
+
+.cont2>p>span {
+    color: hsl(215, 32%, 27%);
+}
+
+.attribution {
+    font-size: 11px;
+    text-align: center;
+}
+
+.attribution a {
+    color: hsl(228, 45%, 44%);
+}
