--- a/styles/aikstyles.css
+++ b/styles/aikstyles.css
@@ -56,6 +56,7 @@ main {
 
 .container>p {
     color: hsl(215, 51%, 70%);
+    font-size: 16px;
     letter-spacing: 0.05rem;
 }
 
@@ -76,6 +77,7 @@ main {
 
 .contd1>p {
     margin-left: 5px;
+    font-size: 16px;
 }
 
 .contd2 {
@@ -91,6 +93,7 @@ main {
 
 .contd2>p {
     margin-left: 5px;
+    font-size: 16px;
 }
 
 .cont2 {
@@ -117,6 +120,7 @@ main {
     margin-left: 18px;
     color: hsl(0, 0%, 100%);
     letter-spacing: 0.05rem;
+    font-size: 16px;
 }
 
 .cont2>p>span {
