--- a/styles/aikstyles.css
+++ b/styles/aikstyles.css
@@ -33,6 +33,7 @@ main {
     border: 1px solid hsl(216, 50%, 16%);
     border-radius: 5px;
     max-width: 100%;
+    height: 100vh;
     margin: 20px;
     margin-top: 30px;
     margin-bottom: 30px;
