--- a/styles/aikstyles.css
+++ b/styles/aikstyles.css
@@ -216,3 +216,11 @@ main {
         font-size: 22px;
     }
 }
+@media only screen and (min-width:1280px) {
+    main{
+        height: 100vh;
+    }
+    .container {
+        max-width: 30%;
+    }
+}
