--- a/styles/aikstyles.css
+++ b/styles/aikstyles.css
@@ -190,11 +190,11 @@ main {
     }
 
     p {
-        font-size: 22px;
+        font-size: 18px;
     }
 
     .container>p {
-        font-size: 22px;
+        font-size: 18px;
         letter-spacing: 0.08rem;
         line-height: 2.2rem;
     }
@@ -213,7 +213,7 @@ main {
     }
 
     .cont2>p {
-        font-size: 22px;
+        font-size: 18px;
     }
 }
 @media only screen and (min-width:1280px) {
@@ -222,5 +222,10 @@ main {
     }
     .container {
         max-width: 30%;
+    }
+
+    .cont1 {
+        margin-top: 25px;
+        margin-bottom: 25px;
     }
 }
