--- a/styles/aikstyles.css
+++ b/styles/aikstyles.css
@@ -181,6 +181,9 @@ main {
 }
 
 @media only screen and (max-width:1200px) {
+    main{
+        height: 100vh;
+    }
     .container>h1 {
         font-size: 25px;
         letter-spacing: 0.08rem;
