--- a/styles/aikstyles.css
+++ b/styles/aikstyles.css
@@ -53,7 +53,11 @@ main {
 }
 
 .svg{
+    top: 43%;
+    left: 50%;
+    cursor: pointer;
     position: absolute;
+    opacity: 0;
 }
 
 .hover{
@@ -68,14 +72,19 @@ main {
     cursor: pointer;
     position: absolute;
     background-color: hsl(178, 100%, 50%);
-    opacity: 0.5;
+    opacity: 0;
 }
 
 
-/* .container>figure:hover .hover{
+.container>figure:hover .hover{
     opacity: 0.5;
-    transition: 3s ease-in-out;
-} */
+    transition: 3s ease;
+}
+
+.container>figure:hover .svg{
+    opacity: 1;
+    transition: 3s ease;
+}
 
 .container>h1 {
     color: hsl(0, 0%, 100%);
@@ -87,6 +96,7 @@ main {
 
 .container>h1:hover {
     color: hsl(178, 100%, 50%);
+    transition: 3s ease;
 }
 
 .container>p {
@@ -174,6 +184,7 @@ main {
 
 .cont2>p>span:hover {
     color: hsl(178, 100%, 50%);
+    transition: 3s ease;
 }
 
 .attribution {
@@ -189,6 +200,10 @@ main {
 
 
 @media only screen and (min-width:280px) {
+    .svg{
+        top: 40%;
+        left: 39%;
+    }
     .container>h1 {
         font-size: 18px;
         letter-spacing: 0.08rem;
@@ -221,11 +236,21 @@ main {
     .container {
         max-width: 60%;
     }
+
+    .svg{
+        top: 40%;
+        left: 42%;
+    }
 }
 
 @media only screen and (min-width:768px) {
     .container {
         max-width: 40%;
+    }
+
+    .svg{
+        top: 40%;
+        left: 42%;
     }
 
     .container>h1 {
@@ -265,6 +290,11 @@ main {
         max-width: 30%;
     }
 
+    .svg{
+        top: 40%;
+        left: 42%;
+    }
+
     .container>h1 {
         font-size: 22px;
         letter-spacing: 0.08rem;
@@ -301,8 +331,14 @@ main {
     main{
         height: 100vh;
     }
+
     .container {
         max-width: 25%;
+    }
+
+    .svg{
+        top: 40%;
+        left: 42%;
     }
 
     .cont1 {
